[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/deck.png" type="Texture" id=1]
[ext_resource path="res://src/builder/Builder.gd" type="Script" id=2]
[ext_resource path="res://src/builder/ui/ProgressBuilder.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 18 )

[node name="Builder" type="Area2D"]
z_index = 1
collision_layer = 8
collision_mask = 64
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ProgressBuilder" parent="." instance=ExtResource( 3 )]
position = Vector2( -24, -28 )

[connection signal="area_entered" from="." to="." method="_on_Builder_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
